# conflake

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ast_entry.h  ast_model.h  ast_node.cpp  ast_node.h  conanfile.txt  main.cpp  pol_lexer.cpp  pol_lexer.h  test.cpp  wip.cpp  wip.h
apps/conflake/: CMakeLists.txt  conflake.cpp
examples/: fib.txt  test10.cfl  test10.txt  test2.cfl  test2.txt  test3.cfl  test3.txt  test4.cfl  test4.txt  test5.cfl  test5.txt  test6.cfl  test6.txt  test7.txt  test8.txt  test9.cfl  test9.txt  test_fun_as_arg.cfl
profiles/: clang_rel
